--- a/tuningpredictor.bib
+++ b/tuningpredictor.bib
@@ -1568,3 +1568,339 @@ year = {2012}
   year={2009},
   publisher={ACM}
 }
+
+
+@book{lobo2007parameter,
+  title={Parameter setting in evolutionary algorithms},
+  author={Lobo, FJ and Lima, Cl{\'a}udio F and Michalewicz, Zbigniew},
+  volume={54},
+  year={2007},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{wolpert1997no,
+  title={No free lunch theorems for optimization},
+  author={Wolpert, David H and Macready, William G},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={1},
+  number={1},
+  pages={67--82},
+  year={1997},
+  publisher={IEEE}
+}
+
+@article{eiben1999parameter,
+  title={Parameter control in evolutionary algorithms},
+  author={Eiben, Agoston Endre and Hinterding, Robert and Michalewicz, Zbigniew},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={3},
+  number={2},
+  pages={124--141},
+  year={1999},
+  publisher={IEEE}
+}
+
+@article{brest2006self,
+  title={Self-adapting control parameters in differential evolution: a comparative study on numerical benchmark problems},
+  author={Brest, Janez and Greiner, Sa{\v{s}}o and Bo{\v{s}}kovi{\'c}, Borko and Mernik, Marjan and Zumer, Viljem},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={10},
+  number={6},
+  pages={646--657},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{Fogarty1989,
+ author = {Fogarty, Terence C.},
+ title = {Varying the Probability of Mutation in the Genetic Algorithm},
+ booktitle = {Proceedings of the Third International Conference on Genetic Algorithms},
+ year = {1989},
+ isbn = {1-55860-006-3},
+ location = {George Mason University, USA},
+ pages = {104--109},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=93126.93162},
+ acmid = {93162},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
+@article{schraudolph1992dynamic,
+  title={Dynamic parameter encoding for genetic algorithms},
+  author={Schraudolph, Nicol N and Belew, Richard K},
+  journal={Machine learning},
+  volume={9},
+  number={1},
+  pages={9--21},
+  year={1992},
+  publisher={Springer}
+}
+
+@inproceedings{shaefer1987argot,
+  title={ARGOT strategy: adaptive respresentation genetic optimizer technique},
+  author={Shaefer, Craig G},
+  booktitle={Genetic algorithms and their applications: proceedings of the second International Conference on Genetic Algorithms: July 28-31, 1987 at the Massachusetts Institute of Technology, Cambridge, MA},
+  year={1987},
+  organization={Hillsdale, NJ: L. Erlhaum Associates, 1987.}
+}
+
+@inproceedings{qin2005self,
+  title={Self-adaptive differential evolution algorithm for numerical optimization},
+  author={Qin, A Kai and Suganthan, Ponnuthurai N},
+  booktitle={Evolutionary Computation, 2005. The 2005 IEEE Congress on},
+  volume={2},
+  pages={1785--1791},
+  year={2005},
+  organization={IEEE}
+}
+
+@incollection{omran2005self,
+  title={Self-adaptive differential evolution},
+  author={Omran, Mahamed GH and Salman, Ayed and Engelbrecht, Andries P},
+  booktitle={Computational intelligence and security},
+  pages={192--199},
+  year={2005},
+  publisher={Springer}
+}
+@inproceedings{yang2008self,
+  title={Self-adaptive differential evolution with neighborhood search},
+  author={Yang, Zhenyu and Tang, Ke and Yao, Xin},
+  booktitle={Evolutionary Computation, 2008. CEC 2008.(IEEE World Congress on Computational Intelligence). IEEE Congress on},
+  pages={1110--1116},
+  year={2008},
+  organization={IEEE}
+}
+@article{cortes1995support,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{chapelle2002choosing,
+  title={Choosing multiple parameters for support vector machines},
+  author={Chapelle, Olivier and Vapnik, Vladimir and Bousquet, Olivier and Mukherjee, Sayan},
+  journal={Machine learning},
+  volume={46},
+  number={1-3},
+  pages={131--159},
+  year={2002},
+  publisher={Springer}
+}
+@article{cherkassky2004practical,
+  title={Practical selection of SVM parameters and noise estimation for SVM regression},
+  author={Cherkassky, Vladimir and Ma, Yunqian},
+  journal={Neural networks},
+  volume={17},
+  number={1},
+  pages={113--126},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{bergstra2012random,
+  title={Random search for hyper-parameter optimization},
+  author={Bergstra, James and Bengio, Yoshua},
+  journal={The Journal of Machine Learning Research},
+  volume={13},
+  number={1},
+  pages={281--305},
+  year={2012},
+  publisher={JMLR. org}
+}
+
+@article{bengio2000gradient,
+  title={Gradient-based optimization of hyperparameters},
+  author={Bengio, Yoshua},
+  journal={Neural computation},
+  volume={12},
+  number={8},
+  pages={1889--1900},
+  year={2000},
+  publisher={MIT Press}
+}
+
+@incollection{larsen1998adaptive,
+  title={Adaptive regularization in neural network modeling},
+  author={Larsen, Jan and Svarer, Claus and Andersen, Lars Nonboe and Hansen, Lars Kai},
+  booktitle={Neural Networks: Tricks of the Trade},
+  pages={113--132},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{lerman1980fitting,
+  title={Fitting segmented regression models by grid search},
+  author={Lerman, PM},
+  journal={Applied Statistics},
+  pages={77--84},
+  year={1980},
+  publisher={JSTOR}
+}
+
+@article{hsu2003practical,
+  title={A practical guide to support vector classification},
+  author={Hsu, Chih-Wei and Chang, Chih-Chung and Lin, Chih-Jen and others},
+  year={2003}
+}
+
+@article{jimenez2009finding,
+  title={Finding optimal model parameters by deterministic and annealed focused grid search},
+  author={Jim{\'e}nez, {\'A}lvaro Barbero and L{\'a}zaro, Jorge L{\'o}pez and Dorronsoro, Jos{\'e} R},
+  journal={Neurocomputing},
+  volume={72},
+  number={13},
+  pages={2824--2832},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{akay2009support,
+  title={Support vector machines combined with feature selection for breast cancer diagnosis},
+  author={Akay, Mehmet Fatih},
+  journal={Expert systems with applications},
+  volume={36},
+  number={2},
+  pages={3240--3247},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{harman2009search,
+  title={Search based software engineering: A comprehensive analysis and review of trends techniques and applications},
+  author={Harman, Mark and Mansouri, S Afshin and Zhang, Yuanyuan},
+  journal={Department of Computer Science, King’s College London, Tech. Rep. TR-09-03},
+  year={2009}
+}
+
+@article{ali2010systematic,
+  title={A systematic review of the application and empirical investigation of search-based test case generation},
+  author={Ali, Shaukat and Briand, Lionel C and Hemmati, Hadi and Panesar-Walawege, Rajwinder K},
+  journal={Software Engineering, IEEE Transactions on},
+  volume={36},
+  number={6},
+  pages={742--762},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{arcuri2013parameter,
+  title={Parameter tuning or default values? An empirical investigation in search-based software engineering},
+  author={Arcuri, Andrea and Fraser, Gordon},
+  journal={Empirical Software Engineering},
+  volume={18},
+  number={3},
+  pages={594--623},
+  year={2013},
+  publisher={Springer}
+}
+
+@incollection{paterson2015parameter,
+  title={Parameter Control in Search-Based Generation of Unit Test Suites},
+  author={Paterson, David and Turner, Jonathan and White, Thomas and Fraser, Gordon},
+  booktitle={Search-Based Software Engineering},
+  pages={141--156},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{sayyad2013parameter,
+  title={On parameter tuning in search based software engineering: A replicated empirical study},
+  author={Sayyad, Abdel Salam and Goseva-Popstojanova, Katerina and Menzies, Tim and Ammar, Hany},
+  booktitle={Replication in Empirical Software Engineering Research (RESER), 2013 3rd International Workshop on},
+  pages={84--90},
+  year={2013},
+  organization={IEEE}
+}
+
+
+@inproceedings{corazza2010effective,
+  title={How effective is tabu search to configure support vector regression for effort estimation?},
+  author={Corazza, Anna and Di Martino, Sergio and Ferrucci, Filomena and Gravino, Carmine and Sarro, Federica and Mendes, Emilia},
+  booktitle={Proceedings of the 6th international conference on predictive models in software engineering},
+  pages={4},
+  year={2010},
+  organization={ACM}
+}
+
+@article{mayer1998tabu,
+  title={Tabu search not an optimal choice for models of agricultural systems},
+  author={Mayer, DG and Belward, JA and Burrage, K},
+  journal={Agricultural Systems},
+  volume={58},
+  number={2},
+  pages={243--251},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@inproceedings{tantithamthavorn2016automated,
+  title={Automated Parameter Optimization of Classification Techniques for Defect Prediction Models},
+  author={Tantithamthavorn, Chakkrit and McIntosh, Shane and Hassan, Ahmed E and Matsumoto, Kenichi},
+ series = {To Appear ICSE '2016}
+}
+
+@article{kuhn2008caret,
+  title={Caret package},
+  author={Kuhn, Max},
+  journal={Journal of Statistical Software},
+  volume={28},
+  number={5},
+  year={2008}
+}
+
+@inproceedings{white2015toward,
+  title={Toward deep learning software repositories},
+  author={White, Martin and Vendome, Christopher and Linares-V{\'a}squez, Mario and Poshyvanyk, Denys},
+  booktitle={Mining Software Repositories (MSR), 2015 IEEE/ACM 12th Working Conference on},
+  pages={334--345},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{lam2015combining,
+  title={Combining Deep Learning with Information Retrieval to Localize Buggy Files for Bug Reports (N)},
+  author={Lam, An Ngoc and Nguyen, Anh Tuan and Nguyen, Hoan Anh and Nguyen, Tien N},
+  booktitle={Automated Software Engineering (ASE), 2015 30th IEEE/ACM International Conference on},
+  pages={476--481},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{bengio2009learning,
+  title={Learning deep architectures for AI},
+  author={Bengio, Yoshua},
+  journal={Foundations and trends{\textregistered} in Machine Learning},
+  volume={2},
+  number={1},
+  pages={1--127},
+  year={2009},
+  publisher={Now Publishers Inc.}
+}
+
+@article{zhou2014big,
+  title={Big data opportunities and challenges: discussions from data analytics perspectives [discussion forum]},
+  author={Zhou, Zhi-Hua and Chawla, Nitesh V and Jin, Yaochu and Williams, Greg J},
+  journal={Computational Intelligence Magazine, IEEE},
+  volume={9},
+  number={4},
+  pages={62--74},
+  year={2014},
+  publisher={IEEE}
+}
