--- a/tuningpredictor.tex
+++ b/tuningpredictor.tex
@@ -139,7 +139,29 @@ search-based software engineering.
 \pagenumbering{arabic} %XXX delete before submission
 
 \section{Introduction}
-\subsection{motivation}
+\subsection{Background}
+Recent years, Parameter tuning has been attracting more attentions in fields like evolutionary
+computation, data mining and  machine learning \cite{lobo2007parameter,Bergstra2012}, where the behavior of the algorithms will be controlled by the built-in parameters.  Practitioners and researchers always encounter questions like can we find an optimal set of parameters once and for all problems. Unfortunately, No Free Lunch theorem \cite{wolpert1997no} will say “NO” to this question because all algorithms perform equally well on all possible problems on average. Different sets of parameters will change the results of the algorithms in the same setting.
+
+For evolutionary algorithms(EA) with parameters like the population size and the probability of mutation, it was realized that in order to achieve optimal convergence, these parameters should be adjusted over time by taking into account information about the progress achieved. Generally, there are two major forms of setting parameter values in EA: {\it parameter tuning} and {\it parameter control}\cite{brest2006self}. The former means the commonly practiced approach that tries to find good values for the parameters before running the algorithm and then run the algorithm using these values, which remain fixed during the run. The latter means that tuning values for the parameters happen during the run of algorithms. Due the nature of EA, where a run of an EA is an intrinsically dynamic, the use of rigid parameters that do not change their values is thus in contrast to this spirit\cite{eiben1999parameter}. Therefore,  the latter form are favored a lot. There are three categories of parameter control\cite{eiben1999parameter}:
+\bi
+\item {\it Deterministic parameter control} is changing the value of parameters based on predefined rules\cite{Fogarty1989}.
+\item {\it Adaptive parameter control} is using the feedback from the search to determine the direction of the change\cite{schraudolph1992dynamic,shaefer1987argot}.
+\item {\it Self-adaptive parameter control} is to incorporate parameters into the ``chromosomes''(a terminology in EA), thereby making them subject to evolution\cite{brest2006self,qin2005self,omran2005self,yang2008self}.
+\ei.
+Evolutionary algorithms have been widely applied in software engineering, eventually forming a research field called search-based software engineering(SBSE)\cite{harman2009search}, where lots of problems in software
+engineering field, like software
+testing suites \cite{ali2010systematic}, can be solved
+by using searching algorithms. Researchers also are aware of those ``magic'' parameters associated with searching algorithms and several studies were conducted to investigate their impacts on the performance of the algorithm in SBSE. Arcuri et al. \cite{arcuri2013parameter} studied parameter tunings in context of unit test data 
+generation using grid-search and response surface methodology.
+Their results show that tuning does indeed have impact on the performance of searching algorithms. Parterson et al.\cite{paterson2015parameter} performed parameter control to improve performance in unit
+test generation problem with three existing methods from {\it Deterministic parameter control}, {\it Adaptive parameter control}, and {\it Self-adaptive parameter control}. Sayyad et al. \cite{sayyad2013parameter} carried out a replicated study on tuning
+parameters on Indicator-Based Evolutionary Algorithm (IBEA), and Nondominated Sorting Genetic Algorithm (NSGA-II) using sort of grid-search method. Their results confirm the findings in the original study by Arcuri.
+
+In  machine learning field,  learning algorithms also involves setting parameters associated with the algorithms. For example, in Random Forests\cite{breiman2001random}, there are {\it hyper-parameters} called {\it number of estimators}, {\it depth of the tree} and {\it number of features}, etc. The actual ``good'' learning algorithm used in practice is usually the one after carefully setting those hyper-parameters in order to minimize the generalization error or cost function\cite{larsen1998adaptive,chapelle2002choosing,cherkassky2004practical,bengio2000gradient}. Bengio \cite{bengio2000gradient} proposed to use gradient-based methods to optimize hyper-parameters in linear regression and time-series prediction. It was also proposed by Larsen et al.\cite{larsen1998adaptive} to optimize the regularization parameters in a neural network. To optimize SVM parameters. Chapelle et al. proposed a framework to use gradient descent method\cite{chapelle2002choosing} and Cherkassky investigated analytical methods based on training data and estimated noise level\cite{cherkassky2004practical}. Nevertheless, as pointed by Bergstra \cite{Bergstra2012}, for some learning algorithms, like random forests and CART, we can't evaluate the expectation over the unknown natural distribution of the cost function or even don't have an explicit cost function as linear regression or SVM. Instead using gradient-based method, direct search methods are more feasible for these learning algorithms. Grid search with cross-validation method is an easy way to find optimal hyper-parameters \cite{lerman1980fitting,hsu2003practical,jimenez2009finding,akay2009support}.However, Bergstra \cite{Bergstra2012} demonstrate that grid search is inferior to random search because for most data sets only a few of the tuning parameters really matter, grid search with  sufficient granularity is not efficient for hyper-parameter optimization for most data sets. Therefore, more efficient searching algorithms are needed.
+
+\subsection{Motivation}
+
  Software analytics is the analytics on data collected from software development
  processes for software managers and engineers to gain insights of their projects
  to make better decisions and deliver high quality software~\cite{menzies2013software}.
@@ -154,32 +176,21 @@ search-based software engineering.
  researchers and practitioners due to the volume of the data. Therefore, some
  automatic and intelligent techniques are required to assist software analytics tasks.
  
- Over the past decade, data mining and machine learning techniques are well
+ Over the past decade, data mining algorithms are well
  recognized tools to explore software data to learn useful patterns or predictive
  models. Several tasks and practices within software development have been
- improved by applying results of software analytics,from requirement, implementation,
- testing and maintenance. For example, in software development process, bug
- reports provide crucial information to developers to fix bugs and improve the
- software quality. The issues with bug reports that many software teams faced
- are how to eliminate duplicated reports, how to classify bug reports according
- to priority, whether the bug reports provide sufficient information to reproduce,
- and how to triage bug reports and find the right software engineers to fix the bug etc. 
- Usually these tasks can be done by human beings spending a lot of time, but like
- 1.1 million bug reports in Mozilla Firefox, automation is very important and
- necessary in this scenario. To automate the detection of duplicate bug reports, several
-approaches have been introduced, like SVM\cite{sun2010discriminative}, linear
-regression \cite{jalbert2008automated} and topic modeling \cite{ alipour2013contextual,nguyen2012duplicate}.
-To classify bug reports based on various practical considerations,many tools
-are proposed using SVM, Naive Bayes, Decision Tree, Logistic Regression, Linear
-Regression and K-Nearest Neighbor algorithms.\cite{antoniol2008bug,zanetti2013categorizing,lamkanfi2011comparing,tian2013drone}.
-Similarly, Bettenburg et.al\cite{bettenburg2008makes} proposed to build predictive
-models with logistic regression and SVM to build model to measure the quality of
-the bug reports and recommend useful components to improve the quality. Other
-works like \cite{anvik2006should, bhattacharya2010fine, lin2009empirical} utilize
-SVM, Naive Bayes and Bayesain Netowrks, C4.5 (J48) to triage bug reports efficiently. 
-
-In addition, there are several other software
-analytics tasks based on software project data. By using software development process data,
+ improved by applying results of software analytics, from requirement, implementation, testing and maintenance.
+%  For example, in software development process, bug
+%  reports provide crucial information to developers to fix bugs and improve the
+%  software quality. The issues with bug reports that many software teams faced
+%  are how to eliminate duplicated reports, how to classify bug reports according
+%  to priority, whether the bug reports provide sufficient information to reproduce,
+%  and how to triage bug reports and find the right software engineers to fix the bug etc. 
+%  Usually these tasks can be done by human beings spending a lot of time, but like
+%  1.1 million bug reports in Mozilla Firefox, automation is very important and
+%  necessary in this scenario. 
+By using text data in software development, data mining algorithms like SVM, linear regression, Naive Bayes, K-nearest neighbors, Decision tree and other algorithms have shown great powerful in addressing problems like
+duplicate bug reports detection \cite{sun2010discriminative,jalbert2008automated,alipour2013contextual,nguyen2012duplicate}, bug reports classification \cite{antoniol2008bug,zanetti2013categorizing,lamkanfi2011comparing,tian2013drone}, measure bug report quality \cite{bettenburg2008makes} and triage bug reports \cite{anvik2006should, bhattacharya2010fine, lin2009empirical}. By using software development process data,
 researchers could estimate project
 efforts\cite{dejaeger2012data,kocaguneli2012value, menzies2013local}, predict risks of 
 development delay \cite{da2014empirical,choetkiertikul2015predicting}, and predict defective
@@ -201,40 +212,41 @@ software researchers' life easy. However, this sort of convenience might put
 software analytics at risk because researchers tend to put lots of efforts on problem formalization, 
 data collection and data processing and then simply use data mining tools as a black box to build 
 predictive models without any considerations regarding the tool.\cite{sun2010discriminative,jalbert2008automated, antoniol2008bug,zanetti2013categorizing,lamkanfi2011comparing,tian2013drone, alipour2013contextual,lin2009empirical,hall11,me07b,choetkiertikul2015predicting,anvik2006should, bhattacharya2010fine}.
-However, one of the ``black arts'' of data mining is setting the tuning
+
+% \bi
+% \item {\em -I}: the number of trees (default: 100).
+% \item {\em -K}: the number of features (default: unlimited).
+% \item {\em depth}: the maximum depth of the trees (default: unlimited).
+% \item {\em -B}: break ties randomly when several attributes look equally good.
+% \item {\em -S}: the seed for random number generator (default:1).
+% \ei
+
+% In Scikit-learn, we have the following parameters to control Random Forests behavior\footnote{http://goo.gl/Lfi3IH}:
+
+% \bi
+% \item {\em n\_estimators}: the number of trees (default: 10)
+% \item {\em max\_features}: the number of features (default: $\sqrt{n\_features}$, options: log2(n\_feautres), etc).
+% \item {\em max\_depth}: the maximum depth of the trees (default: nodes are expanded all leaves are pure or until all leaves contain less than min\_samples\_split samples).
+% \item {\em min\_samples\_split}: the minimum number of samples required to split an node (default: 2).
+% \item {\em min\_samples\_leaf}: the minimum number of samples in newly created leaves (default:1)
+% \item {\em random\_state}: the seed for random number generator(default:numpy.random).
+% \ei
+
+% In randomForest R package, we have the following parameters \footnote{https://goo.gl/ht4pZ1}:
+% \bi
+% \item {\em ntree}:  the number of trees to grow (default:500).
+% \item {\em mtry}: the number of features randomly sampled as candidates at each split (default: ${\sqrt{n\_features}}$).
+% \item {\em nodesize}: minimum size of terminal nodes (default: 5).
+% \item {\em maxnodes}: maximum number of terminal nodes trees in the forest can have(default: unlimited).
+% \ei
+
+% By looking at the tuning parameters for these three different versions of Random Forest, 
+One of the ``black arts'' of data mining is setting the tuning
 parameters that control the choices within a data miner. Different implementations might
-provide different tuning parameters. Take Random Forests classifiers for example. In Weka, the
-following tunings are provided\footnote{http://goo.gl/hqol4H}:
-\bi
-\item {\em -I}: the number of trees (default: 100).
-\item {\em -K}: the number of features (default: unlimited).
-\item {\em depth}: the maximum depth of the trees (default: unlimited).
-\item {\em -B}: break ties randomly when several attributes look equally good.
-\item {\em -S}: the seed for random number generator (default:1).
-\ei
-
-In Scikit-learn, we have the following parameters to control Random Forests behavior\footnote{http://goo.gl/Lfi3IH}:
-
-\bi
-\item {\em n\_estimators}: the number of trees (default: 10)
-\item {\em max\_features}: the number of features (default: $\sqrt{n\_features}$, options: log2(n\_feautres), etc).
-\item {\em max\_depth}: the maximum depth of the trees (default: nodes are expanded all leaves are pure or until all leaves contain less than min\_samples\_split samples).
-\item {\em min\_samples\_split}: the minimum number of samples required to split an node (default: 2).
-\item {\em min\_samples\_leaf}: the minimum number of samples in newly created leaves (default:1)
-\item {\em random\_state}: the seed for random number generator(default:numpy.random).
-\ei
-
-In randomForest R package, we have the following parameters \footnote{https://goo.gl/ht4pZ1}:
-\bi
-\item {\em ntree}:  the number of trees to grow (default:500).
-\item {\em mtry}: the number of features randomly sampled as candidates at each split (default: ${\sqrt{n\_features}}$).
-\item {\em nodesize}: minimum size of terminal nodes (default: 5).
-\item {\em maxnodes}: maximum number of terminal nodes trees in the forest can have(default: unlimited).
-\ei
-
-By looking at the tuning parameters for these three different versions of Random Forest, on one hand
-we observe that they have different sets of built-in tuning parameters to control the algorithms.
-On the other hand, even thought they all have similar parameters to control things like number of trees,
+provide different tuning parameters. Take Random Forests classifiers for example. By comparing the implementation in Weka\footnote{http://goo.gl/hqol4H}, 
+Scikit-learn\footnote{http://goo.gl/Lfi3IH} and R package\footnote{https://goo.gl/ht4pZ1}, on one hand, we observe that they have different sets of built-in tuning parameters to control the algorithms. That means software analytics results obtained by
+using one tool might not be easily reproduced by using the other one.
+On the other hand, even thought they all have similar parameters to control the same behavior like number of trees,
 the default values vary a lot from 10 to 500. Therefore, we could believe that those parameters would change
 the the behavior of a data miner, to some degree. Nevertheless, we rarely tuned our predictors in
 any software analytics tasks since we reasoned that a data miner's default tunings have been 
@@ -242,6 +254,13 @@ well-explored by the developers of those algorithms (in which case
 tuning would not lead to large performance improvements). Also, we suspected that
 tuning would take so long time and be so CPU intensive that the benefits gained would not be worth effort.
 
+There are  a few work within software analytics studying 
+the impacts of parameters in learnining algorithm. Corazza et al.\cite{corazza2010effective} explore hyper-parameter space of SVR by tabu-searh and find that parameter tuning
+actually improves the performance of effort estimator. However, tabu-search might not be suited to the optimisation of models with continuous variables and of higher dimensionality (e.g. having five or more independent management options to investigate) \cite{mayer1998tabu}. Lessmann et al.\cite{lessmann2008benchmarking} tuned parameters for some of their defect predictors using  a {\em grid search}. Similarly, Tantithamthavorn et at.\cite{tantithamthavorn2016automated} applied {\em caret} package \cite{kuhn2008caret}, which is a grid-search based package,  to defect predictors. By reproducing Tantithamthavorn's results, grid serach
+takes extremely long time to find optimal parameters\wei{put running time here}. As mentioned before, grid search explore much searching space which
+are not actually useful. This gives
+ us a hint that  more simple and efficient tuning
+ frameworks should be explored.
 
 To investigate the effect of parameter tuning on software analytics, we take defect prediction as
 an example to study how tuning would change conclusions claimed by previous researchers. Since defect prediction
@@ -252,28 +271,27 @@ in terms of utilizing data miners as its core tool. Therefore, in this paper, we
 on defect prediction.
 
 \subsection{Research Questions}
-Through a case study of 17 groups of software data sets from open source java system, we address the following
-research questions:
+By a case study of 17 groups of defect prediction data sets from open source java system,  the research questions addressed in this paper are the following:
 
 \bi
-\item RQ1: {\bf{\em Does   tuning    improve the performance scores of a predictor?}} We will show below
- examples of truly dramatic improvement:
- usually by 5 to 20\% and often by much more (in one extreme case,  precision improved from 0\% to 60\%).
+\item RQ1: {\bf{\em Does   tuning    improve the performance scores of a predictor?}} %We will show below
+%  examples of truly dramatic improvement:
+%  usually by 5 to 20\% and often by much more (in one extreme case,  precision improved from 0\% to 60\%).
 \item RQ2: {\bf {\em Does tuning change conclusions on what learners are better than others?}} 
-Recent SE papers~\cite{lessmann2008benchmarking,hall11} claim that some learners are better than others. 
-Some of those conclusions are completely changed by tuning. 
-\item RQ3: {\bf {\em Does tuning change conclusions about what factors are most important in software engineering?}} Numerous recent SE papers (e.g.~\cite{bell2013limited,rahman2013how,me02k,Moser:2008,zimmermann2007predicting,%
-herzig2013predicting}) use data miners to conclude that {\em this}
-is more important than {\em that} for reducing software project defects.
-Given the  tuning results of this paper, we show that such conclusions need to be revisited.
-\item  RQ4: {\bf {\em Is tuning easy?}} We show that one of the simpler multi-objective optimizers
-(differential evolution~\cite{storn1997differential}) works very well for tuning defect predictors. 
-\item RQ5: {\bf {\em Is tuning impractically slow?}} We achieved dramatic improvements in the performance scores
-of our data miners in less than 100 evaluations (!); i.e., very
-quickly.
+% Recent SE papers~\cite{lessmann2008benchmarking,hall11} claim that some learners are better than others. 
+% Some of those conclusions are completely changed by tuning. 
+\item RQ3: {\bf {\em Does tuning change conclusions about what factors are most important in software engineering?}} %Numerous recent SE papers (e.g.~\cite{bell2013limited,rahman2013how,me02k,Moser:2008,zimmermann2007predicting,%
+% herzig2013predicting}) use data miners to conclude that {\em this}
+% is more important than {\em that} for reducing software project defects.
+% Given the  tuning results of this paper, we show that such conclusions need to be revisited.
+\item  RQ4: {\bf {\em Is tuning easy?}} %We show that one of the simpler multi-objective optimizers
+% (differential evolution~\cite{storn1997differential}) works very well for tuning defect predictors. 
+\item RQ5: {\bf {\em Is tuning impractically slow?}} %We achieved dramatic improvements in the performance scores
+% of our data miners in less than 100 evaluations (!); i.e., very
+% quickly.
 \item RQ6: {\bf{\em Should data miners be used ``off-the-shelf'' with their default tunings?}}
-For defect prediction from static code measures, our answer is an emphatic ``no'' (and
-the implication for other kinds of  analytics is now an open and urgent question).
+% For defect prediction from static code measures, our answer is an emphatic ``no'' (and
+% the implication for other kinds of  analytics is now an open and urgent question).
 \ei
 
 \subsection{Contribution of this thesis}
@@ -297,13 +315,7 @@ static code defect predictors, tuning is easy and fast.
 \subsection{Statement of thesis}
 
 The results of this paper show that, at least for
-defect prediction from  code attributes:
-\be
-\item
-Tuning  defect predictors is {\em remarkably simple};
-\item
-And can {\em dramatically improve the performance}. 
-\ee
+defect prediction from  code attributes, parameter tuning for defect predictors is {\em remarkably simple} and can {\em dramatically improve the performance}. 
 
 \subsection{Publications (submitted) to date}
 
@@ -594,81 +606,81 @@ for anyone building defect predictors.
 % The rest of this paper repeats the analysis of this section, but for 
 % more complex learners.
  
- \subsection{You Can't Always Get What You Want}\label{sect:goals}
+%  \subsection{You Can't Always Get What You Want}\label{sect:goals}
  
- Having made the case that tuning needs to be explored more,
- but before we get into the technical details of this
- paper, this section discusses some
- general matters about setting goals during tuning
- experiments.
+%  Having made the case that tuning needs to be explored more,
+%  but before we get into the technical details of this
+%  paper, this section discusses some
+%  general matters about setting goals during tuning
+%  experiments.
  
- This paper characterizes tuning as an optimization problem (how to change the settings on the learner
- in order to best improve the output).
-With such optimizations,  it is not always possible to optimize for all goals at the same time.
-For example, the following text does not
-show results for tuning on recall
-or false alarms since optimizing {\em only} for those goals can lead
-to some undesirable side effects:
-\bi
-\item
-{\em Recall} reports the percentage of  predictions that are actual examples of  what we are looking for.
-When we tune for {\em recall}, we can achieve near
-100\% recall-- but the cost of a near 100\% false alarms.
-\item
-{\em False alarms} is the percentage of other examples that are reported  (by the learner)
-to be part of the targeted examples.
-When we tune for {\em false alarms}, we 
-can achieve near zero percent false alarm rates by effectively turning off
-the detector (so the  recall falls to nearly zero).
-\ei
-Accordingly,  this paper  explores performance measures that comment on all 
-target classes: see the  precision and ``F'' measures discussed below: see {\em Optimization Goals}.
-That said, we are sometimes asked what good is a learner if it optimizers for (say) precision
-at the expense of (say) recall. 
+%  This paper characterizes tuning as an optimization problem (how to change the settings on the learner
+%  in order to best improve the output).
+% With such optimizations,  it is not always possible to optimize for all goals at the same time.
+% For example, the following text does not
+% show results for tuning on recall
+% or false alarms since optimizing {\em only} for those goals can lead
+% to some undesirable side effects:
+% \bi
+% \item
+% {\em Recall} reports the percentage of  predictions that are actual examples of  what we are looking for.
+% When we tune for {\em recall}, we can achieve near
+% 100\% recall-- but the cost of a near 100\% false alarms.
+% \item
+% {\em False alarms} is the percentage of other examples that are reported  (by the learner)
+% to be part of the targeted examples.
+% When we tune for {\em false alarms}, we 
+% can achieve near zero percent false alarm rates by effectively turning off
+% the detector (so the  recall falls to nearly zero).
+% \ei
+% Accordingly,  this paper  explores performance measures that comment on all 
+% target classes: see the  precision and ``F'' measures discussed below: see {\em Optimization Goals}.
+% That said, we are sometimes asked what good is a learner if it optimizers for (say) precision
+% at the expense of (say) recall. 
 
-Our reply is that software engineering is a very diverse enterprise
-and that different kinds of development need to optimize for different goals
-(which may not necessarily be ``optimize for recall''):
-\bi
-\item
-Anda, Sjoberg and Mockus are concerned with {\em reproducibility}  and so
-assess their models using the the ``coefficient of variation'' $C\frac{stddev}{mean}$) ~\cite{anda09}.
-\item
-Arisholm~\&~Briand~\cite{arisholm06},  Ostrand \& Weyeuker~\cite{ostrand04} and Rahman et al.~\cite{rahman12} are concerned with reducing the work load associated with someone
-else reading a learned model, then applying it. Hence, they assess their models using  {\em reward}; i.e.   the fewest lines of code
-  containing the most bugs.
-\item
-Yin et al. are concerned about
- {\em incorrect bug fixes}; i.e. those that require subsequent work in order to complete the bug fix.
-These bugs occur  when (say) developers try to fix parts of the code
-where they have very little experience~\cite{yin11}.  Hence, they assess a learned
-model using a measure that selects for  the most number of bugs in regions that {\em the most programmers have worked with before}.
-\item
-For safety critical applications, high false alarm rates are  acceptable if the cost
-of overlooking  critical issues outweighs the inconvenience of   inspecting a few more
-modules. 
-\item
-When rushing a product to market,  there is a business case to 
-avoid the extra rework associated with false alarms.  In that business context, 
-managers might be willing to lower the recall somewhat in order to minimize the false alarms.
-\item
-When the second author worked with contractors at  NASA's software independent verification
-and validation facility, he found  new contractors  
-only reported issues that were most certainly important defects; i.e. they minimized
-  false alarms even if that damaged their precision (since, they felt, 
-it was better to silent than wrong). Later on, once
-those contractors had acquired a reputation of being insightful members of the team,
-they improved their precision scores (even if it means some more false alarms).
-\ei
-Accordingly, this paper does not assume that (e.g.) minimizing false alarms is 
-more important than maximizing   precision or recall. Such a determination 
-depends on   business conditions.
+% Our reply is that software engineering is a very diverse enterprise
+% and that different kinds of development need to optimize for different goals
+% (which may not necessarily be ``optimize for recall''):
+% \bi
+% \item
+% Anda, Sjoberg and Mockus are concerned with {\em reproducibility}  and so
+% assess their models using the the ``coefficient of variation'' $C\frac{stddev}{mean}$) ~\cite{anda09}.
+% \item
+% Arisholm~\&~Briand~\cite{arisholm06},  Ostrand \& Weyeuker~\cite{ostrand04} and Rahman et al.~\cite{rahman12} are concerned with reducing the work load associated with someone
+% else reading a learned model, then applying it. Hence, they assess their models using  {\em reward}; i.e.   the fewest lines of code
+%   containing the most bugs.
+% \item
+% Yin et al. are concerned about
+%  {\em incorrect bug fixes}; i.e. those that require subsequent work in order to complete the bug fix.
+% These bugs occur  when (say) developers try to fix parts of the code
+% where they have very little experience~\cite{yin11}.  Hence, they assess a learned
+% model using a measure that selects for  the most number of bugs in regions that {\em the most programmers have worked with before}.
+% \item
+% For safety critical applications, high false alarm rates are  acceptable if the cost
+% of overlooking  critical issues outweighs the inconvenience of   inspecting a few more
+% modules. 
+% \item
+% When rushing a product to market,  there is a business case to 
+% avoid the extra rework associated with false alarms.  In that business context, 
+% managers might be willing to lower the recall somewhat in order to minimize the false alarms.
+% \item
+% When the second author worked with contractors at  NASA's software independent verification
+% and validation facility, he found  new contractors  
+% only reported issues that were most certainly important defects; i.e. they minimized
+%   false alarms even if that damaged their precision (since, they felt, 
+% it was better to silent than wrong). Later on, once
+% those contractors had acquired a reputation of being insightful members of the team,
+% they improved their precision scores (even if it means some more false alarms).
+% \ei
+% Accordingly, this paper does not assume that (e.g.) minimizing false alarms is 
+% more important than maximizing   precision or recall. Such a determination 
+% depends on   business conditions.
 
-Rather, what we can  show  examples where  changing  optimization goals can also change 
-the conclusions made from that learner on that data. More generally, we caution that it is 
-important not to overstate  empirical results from  analytics.
-Those results need to be expressed {\em along with} the context within which they are
-relevant (and by ``context'', we mean the optimization goal).
+% Rather, what we can  show  examples where  changing  optimization goals can also change 
+% the conclusions made from that learner on that data. More generally, we caution that it is 
+% important not to overstate  empirical results from  analytics.
+% Those results need to be expressed {\em along with} the context within which they are
+% relevant (and by ``context'', we mean the optimization goal).
 
 
 
@@ -910,8 +922,8 @@ Hall et al. recommendation.
 
 Finally,  this
  paper uses WHERE since, as shown below,
-it offers an interesting case study on the benefits of tuning.
-
+it offers the new perspective that tuning could change the
+most important features selected by the learner.
   
 %%%%%%%%%%%%%%%% list of parameters%%%%%%%%%%%%%%%%%%%%%
 \renewcommand\arraystretch{1.2}
@@ -999,13 +1011,13 @@ However, for the goals of this paper (to show that some tunings do matter), expl
 just these ranges shown in \tab{parameters} will suffice.
 
 
-As to the details of these learners, LR is a parametric
-modeling approach. Given $f = \beta_0 + \sum_i\beta_ix_i$,
-where $x_i$ is some measurement in a data set, and $\beta_i$
-is learned via regression, LR
-converts that into a function $0 \le g \le 1$
-using $g=1/\left(1+e^{- f}\right)$. This function reports how much
-we believe in a particular class. 
+% As to the details of these learners, LR is a parametric
+% modeling approach. Given $f = \beta_0 + \sum_i\beta_ix_i$,
+% where $x_i$ is some measurement in a data set, and $\beta_i$
+% is learned via regression, LR
+% converts that into a function $0 \le g \le 1$
+% using $g=1/\left(1+e^{- f}\right)$. This function reports how much
+% we believe in a particular class. 
 
 CART, Random Forest, and WHERE-based learners are all  tree learners that divide a data set, then recur
 on each split.
@@ -1987,10 +1999,35 @@ can we improve tuning performance in those data sets?
 
 Recall the statement we made at the beginning of this section, tuning and testing data have to be correlated.
 Even though they are all from the same project, we still can't make sure whether they're strongly
-co
+correlated. What we can do here is to apply some heuristics to select the more correlated data from training set as tuning data based
+on some properties of testing data without using label information. Up to now, the basic idea is to cluster
+training and testing data to find nearest neighbours
+by using distance metrics. Specifically, the ideas are described as following:\\
+Idea A
+\bi
+\item cluster the training and testing data, separately.
+\item find some distance measure between training clusters and testing clusters.
+\item run all our tuning methods on the closest training data clusters.
+\item run the testing clusters using the tunings generated by their nearest training clusters.
+\ei
+Idea B
+\bi
+\item make labels for testing and training data.
+\item cluster all training and testing data together.
+\item select those data that sit close to testing data as training(or tuning) data.
+\item run tuning methods on the selected training data
+run testing using the tunings generated by selected training data.
+\ei
 
 
+\subsection{Tune more learners}
+The results of this paper as well as \cite{tantithamthavorn2016automated} show that tuning
+can improve performance of defect predictor on most data
+sets. However, whether other software analytics tasks like
+duplicate bug reports detection \cite{sun2010discriminative,jalbert2008automated,alipour2013contextual,nguyen2012duplicate}, and bug reports classification \cite{antoniol2008bug,zanetti2013categorizing,lamkanfi2011comparing,tian2013drone} can be improved or not are unclear. It's worthy to explore more tuning practices in such topics in software engineering.
 
+Recent research in software engineering community has examined and applied deep learning to address problems
+, like code suggestion \cite{white2015toward} and localize buggy files \cite{lam2015combining}, which demonstrates its effectiveness at real software engineering tasks compared to state of the art method. However, deep learning networks usually include multiple levels of nonlinear transformations\cite{bengio2009learning}. Models like RNNs have many number of hyper parameters to control the whole system, like the number of hidden layer, the learning rate, and the amount of regularization, etc. However, most deep learning work strongly relies on engineering tricks that are difficult to be repeated and studied by others, apart from the authors themselves\cite{zhou2014big}. Up to now, there's no research on tuning deep learning parameters using software engineering data sets. There are several open questions here, like how to efficiently tune deep learning? is the train-tune-test framework still available for deep learning given the long running time in current literature?
 
 
 
@@ -1998,7 +2035,7 @@ co
 % Finally, on a more general note, we point out
 % that 
 % F\"{u}rnkranz~\cite{furnkranz05} says data mining is inherently a multi-objective optimization
-% problem that seeks the smallest model with the highest performance, 
+% problem that seeks the smallest model with the highest performance,    
 % that generalizes best for
 % future examples (perhaps learned in minimal time using the least amount of data).
 % In this view, we are using DE to optimize an optimizer. Perhaps a better approach might be
