--- a/7.0section_futurework.tex
+++ b/7.0section_futurework.tex
@@ -72,3 +72,5 @@ Recent research in software engineering community has examined and applied deep 
 \item How to efficiently tune deep learning? 
 \item Is the train-tune-test framework still available for deep learning given the long running time of deep learning in current literature?
 \ei
+Besides these, there are more tuning problems in complex models like deep learning, which 
+are much worthy to explore in the near future.
