--- a/tuningpredictor.bib
+++ b/tuningpredictor.bib
@@ -1904,3 +1904,21 @@ year = {2012}
   year={2014},
   publisher={IEEE}
 }
+
+@article{ram1996parallel,
+  title={Parallel simulated annealing algorithms},
+  author={Ram, D Janaki and Sreenivas, TH and Subramaniam, K Ganapathy},
+  journal={Journal of parallel and distributed computing},
+  volume={37},
+  number={2},
+  pages={207--212},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{maclaurin2015gradient,
+  title={Gradient-based hyperparameter optimization through reversible learning},
+  author={Maclaurin, Dougal and Duvenaud, David and Adams, Ryan P},
+  journal={arXiv preprint arXiv:1502.03492},
+  year={2015}
+}
