--- a/2.0section_literaturereview.tex
+++ b/2.0section_literaturereview.tex
@@ -1,5 +1,29 @@
 \section{Literature Review} 
 
+\subsection{Tuning in literature}
+This section discusses the current parameter tuning methods existing in literature-particulary
+in the evolutionary computation and machine learning fields.
+
+
+Parameter tuning(or hyper-parameter optimization) has been attracting more attentions in fields like evolutionary
+computation, data mining and  machine learning \cite{lobo2007parameter,Bergstra2012}, where the behavior of the algorithms will be controlled by the built-in parameters.  Practitioners and researchers always encounter questions like can we find an optimal set of parameters once and for all problems. Unfortunately, No Free Lunch theorem \cite{wolpert1997no} will say ``NO'' to this question because all algorithms perform equally well on all possible problems on average. Different sets of parameters will change the results of the algorithms in the same setting.
+
+For evolutionary algorithms(EA) with parameters like the population size and the probability of mutation, it was realized that in order to achieve optimal convergence, these parameters should be adjusted over time by taking into account information about the progress achieved. Generally, there are two major forms of setting parameter values in EA: {\it parameter tuning} and {\it parameter control}\cite{brest2006self}. The former means the commonly practiced approach that tries to find good values for the parameters before running the algorithm and then run the algorithm using these values, which remain fixed during the run. The latter means that tuning values for the parameters happen during the run of algorithms. Due the nature of EA, where a run of an EA is an intrinsically dynamic, the use of rigid parameters that do not change their values is thus in contrast to this spirit\cite{eiben1999parameter}. Therefore,  the latter form are favored a lot. There are three categories of parameter control\cite{eiben1999parameter}:
+\bi
+\item {\it Deterministic parameter control} is changing the value of parameters based on predefined rules\cite{Fogarty1989}.
+\item {\it Adaptive parameter control} is using the feedback from the search to determine the direction of the change\cite{schraudolph1992dynamic,shaefer1987argot}.
+\item {\it Self-adaptive parameter control} is to incorporate parameters into the ``chromosomes''(a terminology in EA), thereby making them subject to evolution\cite{brest2006self,qin2005self,omran2005self,yang2008self}.
+\ei.
+Evolutionary algorithms have been widely applied in software engineering, eventually forming a research field called search-based software engineering(SBSE)\cite{harman2009search}, where lots of problems in software
+engineering field, like software
+testing suites \cite{ali2010systematic}, can be solved
+by using searching algorithms. Researchers also are aware of those ``magic'' parameters associated with searching algorithms and several studies were conducted to investigate their impacts on the performance of the algorithm in SBSE. Arcuri et al. \cite{arcuri2013parameter} studied parameter tunings in context of unit test data 
+generation using grid-search and response surface methodology.
+Their results show that tuning does indeed have impact on the performance of searching algorithms. Parterson et al.\cite{paterson2015parameter} performed parameter control to improve performance in unit
+test generation problem with three existing methods from {\it Deterministic parameter control}, {\it Adaptive parameter control}, and {\it Self-adaptive parameter control}. Sayyad et al. \cite{sayyad2013parameter} carried out a replicated study on tuning
+parameters on Indicator-Based Evolutionary Algorithm (IBEA), and Nondominated Sorting Genetic Algorithm (NSGA-II) using sort of grid-search method. Their results confirm the findings in the original study by Arcuri.
+
+In  machine learning field,  learning algorithms also involves setting parameters associated with the algorithms. For example, in Random Forests\cite{breiman2001random}, there are {\it hyper-parameters} called {\it number of estimators}, {\it depth of the tree} and {\it number of features}, etc. The actual ``good'' learning algorithm used in practice is usually the one after carefully setting those hyper-parameters in order to minimize the generalization error or cost function\cite{larsen1998adaptive,chapelle2002choosing,cherkassky2004practical,bengio2000gradient}. Bengio \cite{bengio2000gradient} proposed to use gradient-based methods to optimize hyper-parameters in linear regression and time-series prediction. It was also proposed by Larsen et al.\cite{larsen1998adaptive} to optimize the regularization parameters in a neural network. To optimize SVM parameters. Chapelle et al. proposed a framework to use gradient descent method\cite{chapelle2002choosing} and Cherkassky investigated analytical methods based on training data and estimated noise level\cite{cherkassky2004practical}. Nevertheless, as pointed by Bergstra \cite{Bergstra2012}, for some learning algorithms, like random forests and CART, we can't evaluate the expectation over the unknown natural distribution of the cost function or even don't have an explicit cost function as linear regression or SVM. Instead using gradient-based method, direct search methods are more feasible for these learning algorithms. Grid search with cross-validation method is an easy way to find optimal hyper-parameters \cite{lerman1980fitting,hsu2003practical,jimenez2009finding,akay2009support}.However, Bergstra \cite{Bergstra2012} demonstrate that grid search is inferior to random search because for most data sets only a few of the tuning parameters really matter, grid search with  sufficient granularity is not efficient for hyper-parameter optimization for most data sets. Therefore, more efficient searching algorithms are needed.
 
 \subsection{Defect Prediction}
 
@@ -28,7 +52,7 @@ When we tune a data miner, what we are really doing is changing how a learner ap
 its heuristics. This means tuned data miners use different heuristics, which means they ignore different possible models, which means they return different models; i.e.  {\em how} we learn changes {\em what} we learn.
 
 Are the impacts of tuning addressed in the defect prediction literature?
-To answer that question,  in Feb 2016 we searched scholar.google.com for the conjunction of ``data mining" and ``software engineering" and  ``defect prediction"\footnote{More details can be found at https://goo.gl/Inl9nF}.
+To answer that question,  we searched scholar.google.com in Feb 2016  for the conjunction of ``data mining" and ``software engineering" and  ``defect prediction"\footnote{More details can be found at https://goo.gl/Inl9nF}.
 After sorting by the citation count and discarding the non-SE papers (and those without a pdf link), we read over this sample
 of  50 highly-cited SE defect prediction papers. 
 What we found in that sample was that few authors
@@ -323,33 +347,29 @@ for anyone building defect predictors.
 
 
 \subsection{Tuning Algorithms}
-  
- \wei{will add more details talking about tuning algorithms.here on Monday.}  
-How should researchers select which optimizers to apply to tuning data miners?
-Cohen~\cite{cohen95} advises comparing new 
- methods against the simplest possible alternative. 
-Similarly, Holte~\cite{holte93} recommends using very simple  learners
- as a
-kind of ``scout'' for a  preliminary analysis of a data
-set (to check if that data really requires a more
-complex analysis).
-Accordingly,
-to find our ``scout'',  we used engineering judgement to sort  candidate algorithms from simplest to  complex. For
-example, here is a list of optimizers used widely in research:
-{\em 
-simulated annealing}~\cite{fea02a,me07f};
- various {\em genetic algorithms}~\cite{goldberg79} augmented by
-techniques such as {\em differential evolution}~\cite{storn1997differential}, 
-{\em tabu search} and {\em scatter search}~\cite{Glover1986563,Beausoleil2006426,Molina05sspmo:a,4455350};
-{\em particle swarm optimization}~\cite{pan08}; 
-numerous {\em decomposition} approaches that use
-    heuristics to decompose the total space into   small problems,   then apply a
-    {\em response surface methods}~\cite{krall15,Zuluaga:13}.
-Of these,  the simplest are simulated annealing (SA)  and 
-differential evolution (DE), each of which can be coded in less than a page of some high-level scripting language. Our reading of the current literature is that there are more  advocates for
+
+A lot of optimization searching algorithms can be found in mathematical,
+evolutionary computation, and artificial intelligent fields.
+How should researchers select which optimizers to apply to tune data miners working 
+with software engineering data? Predictive models, like defect predictor,
+in software engineering have several limitations: the models are usually not
+numerically differentiated; whether the response surfaces are smooth or non-smooth are unknown;
+for some models, they have more parameters to tune, which will lead to a very complicated searching space. Due to these limitations, the most efficient searching algorithm
+are likely to work well with software predictive models. Specifically,
+{\em gradient} methods that are widely used in machine learning\cite{bengio2000gradient,maclaurin2015gradient} for 
+hyper-parameters optimization are not suited to this situation because gradients are usually unavailable; 
+{\em tabu-search} struggles with
+the high-dimensional optimization problem \cite{mayer1998tabu}; {\em Simulated annealing} 
+has been considered a good tool for complex nonlinear optimization problems\cite{fea02a,me07f}, but one of the major drawbacks of the technique is its very slow convergence, especially for large searching space\cite{ram1996parallel}. Then the evolutionary algorithms will be
+the most practical candidate tools.
+
+There are various eovlutionary algoirhtms, like {\em genetic algorithms}\cite{goldberg79}, {\em differential evolution}~\cite{storn1997differential} and 
+{\em particle swarm optimization}~\cite{pan08}.
+Of these,   
+differential evolution (DE) is the simplest one, which can be coded in less than a page of some high-level scripting language. Our reading of the current literature is that there are more  advocates for
 differential evolution than
-  SA. For example,  Vesterstrom and Thomsen~\cite{Vesterstrom04} found DE to be competitive with 
-   particle swarm optimization and other GAs. 
+  the others as a optimization tool. For example,  Vesterstrom and Thomsen~\cite{Vesterstrom04} found DE to be competitive with 
+  particle swarm optimization and other GAs. 
    
 DEs have been applied before for   parameter tuning (e.g. see~\cite{omran2005differential, chiha2012tuning}) but this is the first time they have been applied to
 optimize defect prediction from static code attributes.  
